<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context=".activity.PhoneNumberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_10sdp"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="@dimen/_28sdp"
            android:layout_height="@dimen/_28sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:background="@drawable/white_btn"
            android:backgroundTint="#80FFFFFF"
            android:padding="@dimen/_5sdp"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="@color/black" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/metropolis_bold"
            android:text="@string/Enter_Phone_Number"
            android:textColor="@color/black"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/metropolis_regular"
            android:gravity="center_horizontal"
            android:text="@string/A_4_Digit_OTP_will_be_send_via_SMS_to_verify_your_mobile_number"
            android:textColor="#80000000"
            android:textSize="@dimen/_15sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/metropolis_medium"
            android:text="@string/Phone_Number"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <com.hbb20.CountryCodePicker
                android:id="@+id/codePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true" />

            <View
                android:layout_width="1dp"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center_vertical"
                android:background="#4D000000" />

            <EditText
                android:id="@+id/edtNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_10sdp"
                android:background="@color/white"
                android:fontFamily="@font/metropolis_regular"
                android:hint="@string/Enter_Number"
                android:inputType="number"
                android:maxLength="10"
                android:textColor="@color/black"/>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="#4D000000" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnsendOtp"
            android:layout_width="@dimen/_178sdp"
            android:layout_height="@dimen/_38sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/blue_btn"
            android:fontFamily="@font/metropolis_medium"
            android:text="@string/Sent_OTP"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>